- Blank areas of integer typed maps now contain the user-supplied
  DATA_BLANK value, if specified in the MaRC input file.  This allows
  FITS image readers to easily identify areas of integer typed maps
  that lack data.

- Corrected a problem where MaRC's Simple Cylindrical projection could
  not handle the case where lower and upper longitudes in the map were
  the same, signifying a 360 degree range, resulting in only single
  longitude being mapped across all map pixels.  MaRC now assumes the
  full 360 degree longitude range is being mapped if both the lower
  and upper longitude are the same, and issues a diagnostic message
  accordingly.

- The MU plane no longer needs to have the sub-solar point specified.
  It was never needed for emission angle calculations.

- The MU0 plane no longer needs to have the sub-observer point and
  range specified.  They were never needed for incidence angle
  computations.

- Improved MaRC input file parser error reporting.  The filename, line
  number and column containing the syntax error are now reported to
  the user.

- Corrected handling of position angles explicity marked as clockwise,
  i.e. "CW", in MaRC input files.  They were erroneously treated as
  counter-clockwise position angles.

- The user-specific MaRC configuration file is now expected to be
  `$XDG_CONFIG_HOME/marc', which is `~/.config/marc' by default, to
  conform to the XDG Base Directory Specification.  The old MaRC
  configuration filename `~/.marc' is no longer supported.

- Added command line option support.  Try "marc --help".

- Improved logging by leveraging the fmt library as the underlying
  logging framework.  This allows for faster logging, and log level
  differentiated output.

- Corrected progress output for the Orthographic map projection so
  that completion percentage is printed up to 100%.

- MERCATOR map entries in MaRC input files may now use options common
  to all MaRC map projections.
